# trading-system

./: .env.EXAMPLE  .gitignore  CLAUDE.md  OPERATING_MANUAL.md  README.md  SOUL.md  config.yaml  distribution.yaml  idea-honing.md  install.sh  mcp.json  rough-idea.md  summary.md
cron/: eod-review.json  market-scan.json  position-monitor.json  weekly-review.json
design/: detailed-design.md
docs/specs/: 2026-05-24-backtest-engine-v2-design.md  2026-05-24-backtest-engine-v2-plan.md  2026-05-27-backtest-engine-v3-design.md
implementation/: e2e-validation.md  plan.md
reports/: report_2026-05-01_to_2026-05-22.md
research/: agent-frameworks.md  alpaca-api.md  backtesting-frameworks.md  multi-agent-trading-architectures.md  sop-driven-design.md
skills/backtest/: SKILL.md
skills/eod-review/: SKILL.md
skills/monitor/: SKILL.md
skills/research/: SKILL.md
skills/risk-manager/: SKILL.md
tools/: models.py  pyproject.toml  server.py
tools/analysis/: indicators.py
tools/audit/: compliance.py  performance.py
tools/backtest/: engine.py  harness.py  labeler.py  logger.py  validator.py
tools/broker/: adapter.py  alpaca.py  retry.py  simulation.py
tools/data/: cache.py
tools/notifications/: slack.py
tools/persistence/: db.py  repository.py
tools/risk/: checks.py
tools/scanner/: __init__.py  filters.py
tools/tests/: test_audit.py  test_backtest_logger.py  test_broker.py  test_data_analysis.py  test_engine_plumbing.py  test_harness.py  test_labeler.py  test_models_and_persistence.py  test_risk.py  test_scanner.py  test_simulation.py  test_validator.py
(+14 files in other folders)
