[project]
name = "trading-tools"
version = "0.1.0"
description = "MCP tools server for the multi-agent trading system"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "alpaca-py>=0.30.0",
    "pandas>=2.0.0",
    "ta>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
